# synty

./: .README.md.swp  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  design.md  design_tui.md  eval_report.md  heuristics-audit.md  install.sh  quality-roadmap.md  roadmap.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
deploy/aws/: athena-trace.yaml  ecr-publisher.yaml  mcp-reader.yaml
deploy/helm/synty/: Chart.yaml  values-sie-gw-cfg.yaml  values.yaml
deploy/helm/synty/templates/: _helpers.tpl  builder.yaml  configmap.yaml  mcp.yaml  pvc.yaml  serviceaccount.yaml  tracker.yaml
docs/: cli.tape  demos.md  design.md  install.tape  tui.tape
evals/: README.md  tuning.md
scripts/: fleet-smoke.sh  mcp-http-smoke.sh
src/: blocks.rs  bucket.rs  claudecode.rs  cluster.rs  codex.rs  community.rs  config.rs  cowork.rs  encode.rs  eval.rs  event.rs  fleet.rs  generation.rs  github.rs  identity.rs  import.rs  index.rs  ingest.rs  init.rs  join.rs  keyphrase.rs  lease.rs  main.rs  mcp.rs  mcp_http.rs  metrics.rs  model.rs  policy.rs  progress.rs  qwen.rs  readmodel.rs  redact.rs  related.rs  release.rs  search.rs  setup.rs  store.rs  summarize.rs  sync.rs  tail.rs  (+9 more)
src/bucket/: cloud.rs
