[package]
name = "synty"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Apple Silicon GPU encode (candle Metal backend). Build: --features metal.
metal = ["pylate-rs/metal", "candle-core/metal"]
# CPU BLAS via Apple Accelerate (macOS) — safe fallback when a Metal op is
# unimplemented. Build: --features accelerate.
accelerate = ["pylate-rs/accelerate", "candle-core/accelerate"]
# CPU BLAS via Intel MKL (Linux/x86). Build: --features mkl.
mkl = ["pylate-rs/mkl", "candle-core/mkl"]

[dependencies]
anyhow = "1.0.102"
candle-core = "0.9.2"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
ndarray = "0.16"
next-plaid = "1.5.0"
pylate-rs = { version = "1.0.4", features = ["ndarray"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
ureq = "2"
walkdir = "2.5.0"
