[package]
name = "synty"
version = "0.2.4"
edition = "2024"
rust-version = "1.97"
description = "A passive, local-first memory of coding-agent sessions and GitHub activity, with ColBERT retrieval, local summaries, and an optional team bucket."
license = "Apache-2.0"
repository = "https://github.com/superlinked/synty"
homepage = "https://github.com/superlinked/synty"
readme = "README.md"
keywords = ["colbert", "retrieval", "coding-agents", "embeddings", "search"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["llm"]
# Local abstractive session summaries via Qwen3-0.6B on candle. On by default;
# candle-transformers is already in the tree (pylate-rs pulls it), so this adds
# almost nothing to the binary. `--no-default-features` builds a pure extractive,
# LLM-free reader. The core (retrieval, clustering, keyphrases) is never LLM.
llm = ["dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
# Apple Silicon GPU encode (candle Metal backend). Build: --features metal.
metal = ["pylate-rs/metal", "candle-core/metal"]
# CPU BLAS via Apple Accelerate (macOS) — safe fallback when a Metal op is
# unimplemented. Build: --features accelerate.
accelerate = ["pylate-rs/accelerate", "candle-core/accelerate"]
# CPU BLAS via Intel MKL (Linux/x86). Build: --features mkl.
mkl = ["pylate-rs/mkl", "candle-core/mkl"]
# Cloud bucket backends (object_store). Build: --features s3 / --features gcs.
s3 = [
    "dep:object_store",
    "object_store/aws",
    "dep:tokio",
    "dep:futures",
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:async-trait",
]
gcs = ["dep:object_store", "object_store/gcp", "dep:tokio", "dep:futures"]
# Authenticated Streamable HTTP transport for remote MCP clients. Stdio stays
# available in every build; release/container artifacts opt into this feature.
mcp-http = [
    "dep:bytes",
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:tokio",
    "dep:tokio-rustls",
]

[dependencies]
anyhow = "1.0.102"
candle-core = "0.9.2"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
fs2 = "0.4.3"
half = "2.7.1"
libc = "0.2"
regex = "1"

# Local summarizer (the `llm` feature). candle-transformers/tokenizers are
# already resolved transitively via pylate-rs; declaring them direct just lets
# us call the Qwen3 model + tokenizer.
candle-nn = { version = "0.9.2", optional = true }
candle-transformers = { version = "0.9.2", optional = true }
tokenizers = { version = "0.21", optional = true }
ndarray = "0.16"
next-plaid = "1.5.0"
ratatui = "0.29"
pylate-rs = { version = "1.0.4", features = ["ndarray"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
ureq = "2"
walkdir = "2.5.0"

# Cloud bucket backends, pulled in only by the s3 / gcs features.
object_store = { version = "0.11", optional = true, default-features = false }
tokio = { version = "1", optional = true, default-features = false, features = ["rt-multi-thread", "net", "sync", "time"] }
futures = { version = "0.3", optional = true }
# The SDK config chain is only part of the opt-in S3 build. It gives Synty
# rotating profile/credential_process/instance-role credentials instead of
# freezing short-lived environment keys inside a login service. Keep this
# release pinned to the repository's current Rust toolchain; newer aws-config
# releases raise their MSRV independently of Synty.
aws-config = { version = "=1.8.8", optional = true, default-features = false, features = ["rt-tokio", "credentials-process", "default-https-client"] }
aws-credential-types = { version = "=1.2.8", optional = true }
async-trait = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1", optional = true, features = ["http1", "server"] }
hyper-util = { version = "0.1", optional = true, features = ["server", "tokio"] }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
tokio-rustls = { version = "0.26", optional = true }
